[gd_scene load_steps=25 format=2]

[ext_resource path="res://models/explosion/0004.png" type="Texture" id=1]
[ext_resource path="res://scripts/Explosion.gd" type="Script" id=2]
[ext_resource path="res://models/explosion/0002.png" type="Texture" id=3]
[ext_resource path="res://models/explosion/0006.png" type="Texture" id=4]
[ext_resource path="res://models/explosion/0008.png" type="Texture" id=5]
[ext_resource path="res://models/explosion/0007.png" type="Texture" id=6]
[ext_resource path="res://models/explosion/0018.png" type="Texture" id=7]
[ext_resource path="res://models/explosion/0017.png" type="Texture" id=8]
[ext_resource path="res://models/explosion/0003.png" type="Texture" id=9]
[ext_resource path="res://models/explosion/0000.png" type="Texture" id=10]
[ext_resource path="res://models/explosion/0005.png" type="Texture" id=11]
[ext_resource path="res://models/explosion/0010.png" type="Texture" id=12]
[ext_resource path="res://models/explosion/0011.png" type="Texture" id=13]
[ext_resource path="res://models/explosion/0015.png" type="Texture" id=14]
[ext_resource path="res://models/explosion/0013.png" type="Texture" id=15]
[ext_resource path="res://models/explosion/0014.png" type="Texture" id=16]
[ext_resource path="res://models/explosion/0001.png" type="Texture" id=17]
[ext_resource path="res://models/explosion/0016.png" type="Texture" id=18]
[ext_resource path="res://models/explosion/0019.png" type="Texture" id=19]
[ext_resource path="res://models/explosion/0009.png" type="Texture" id=20]
[ext_resource path="res://models/explosion/0012.png" type="Texture" id=21]
[ext_resource path="res://sounds/explosion.wav" type="AudioStream" id=22]
[ext_resource path="res://scripts/ExplosionSound.gd" type="Script" id=23]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 11 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 21 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 50.0
} ]

[node name="Explosion" type="Spatial"]
script = ExtResource( 2 )

[node name="ExplosionAnimation" type="AnimatedSprite3D" parent="."]
transform = Transform( 0.3, 0, 0, 0, -1.31134e-08, -0.3, 0, 0.3, -1.31134e-08, 0, 0, 0 )
frames = SubResource( 1 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
script = ExtResource( 23 )
Sound = ExtResource( 22 )

[connection signal="animation_finished" from="ExplosionAnimation" to="." method="hide_explosion"]
[connection signal="finished" from="ExplosionSound" to="." method="end_explosion"]
